# NDKBitmapProcess

./: README.md
NDKImageBlurring/: settings.gradle
NDKImageBlurring/blur/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  load.c  net_qiujuer_genius_blur_StackNative.c  net_qiujuer_genius_blur_StackNative.h  stackblur.c  stackblur.h
NDKImageEditor-Android/: README.md  (+2 more)
NDKImageEditor-Android/imageedit/: CMakeLists.txt  build.gradle
NDKImageEditor-Android/imageedit/src/main/: AndroidManifest.xml
NDKImageEditor-Android/imageedit/src/main/cpp/: Android.mk  CMakeLists.txt  beauty.h  bicubic_resize.c  bicubic_resize.h  bitmap.c  bitmap.h  blur.c  blur.h  colour_space.c  colour_space.h  filter.c  filter.h  matrix.c  mem_utils.c  mem_utils.h  nanojpeg.c  nanojpeg.h  photo_processing.c  transform.c  transform.h
NDKImageEditor-Android/imageedit/src/main/res/anim/: menuhide.xml
NDKImageEditor-Android/imageedit/src/main/res/drawable/: image_edit_icon_filter.xml  image_edit_icon_sticker.xml  image_edit_icon_text.xml
NDKImageEditor-Android/imageedit/src/main/res/layout/: activity_main.xml  bucketitem.xml  fragment_edit_image_crop.xml  fragment_edit_image_main_menu.xml  fragment_edit_image_sticker_type.xml  fragment_edit_paint.xml  view_color_more_panel.xml  view_color_panel.xml
NDKImageEditor-Android/imageedit/src/main/res/values/: colors.xml
NDKImageEditor-Android/imageedit/src/main/res/values-zh/: strings.xml
NDKMagicCamera/magicfilter/: CMakeLists.txt  build.gradle
NDKMagicCamera/magicfilter/src/androidTest/java/com/seu/magicfilter/: ExampleInstrumentedTest.java
NDKMagicCamera/magicfilter/src/main/: AndroidManifest.xml
NDKMagicCamera/magicfilter/src/main/cpp/: MagicJni.cpp
NDKMagicCamera/magicfilter/src/main/cpp/beautify/: MagicBeautify.cpp  MagicBeautify.h
NDKMagicCamera/magicfilter/src/main/cpp/bitmap/: BitmapOperation.cpp  BitmapOperation.h  Conversion.h  JniBitmap.h
NDKMagicCamera/magicfilter/src/main/java/com/seu/magicfilter/: MagicEngine.java
NDKMagicCamera/magicfilter/src/main/res/raw/: beauty.glsl
(+299 files in other folders)
